--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,148 @@
 /*
-
 Style sheet info stripped out of local style, and mved here
+*/
 
-
-/*
+body {
+  background: #eee;
+  -webkit-transition: background-color 500ms linear;
+  -moz-transition: background-color 500ms linear;
+  -o-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+}
+.content {
+  width: 720px;
+  margin: 0 auto;
+  padding: 10px 20px 20px;
+}
+#logo {
+  margin: 15px 0 0;
+}
+h1 {
+  font-size: 18px;
+  font-weight: 600;
+  text-shadow: 0 2px 0 #fff;
+  margin: 0 0 10px;
+  background: #eee url('/web/20140517014333im_/http://atmedia.info/gpixel.png') repeat-x center;
+  text-align: center;
+  color: #0732c0;
+}
+h1 span {
+  background: #eee;
+  display: inline-block;
+  padding: 0 7px;
+}table {
+  width: 100%;
+  margin: 0;
+}
+input, textarea#mediaQuery {
+  background-color: #FFF;
+  /*color: #000;*/
+  font-size: 14px;
+  padding: 6px 7px;
+  /*width: 250px;*/
+  min-width: 80px;  border: 1px solid #BBB;
+  border-top-color: #999;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.18);
+  -ms-box-shadow: inset 0 1px 2px rgba(0,0,0,0.18);
+  -o-box-shadow: inset 0 1px 2px rgba(0,0,0,0.18);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.18);
+  -webkit-font-smoothing: antialiased;
+  font-family: monospace;
+}
+textarea#mediaQuery {
+  width: 98%;
+  margin: 10px 0 20px;
+  max-width: 100%;
+}
+label {
+  text-align: right;
+  display: block;
+  font-size: 13px;
+  font-weight: 600;
+  color: #999;
+  padding-right: 7px;
+  text-shadow: 0 1px 0 #fff;
+}
+input.disabled {
+  opacity: 1;
+  font-weight: bold;
+  background: none;
+  border: 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  color: #000;
+  padding: 3px 0;
+}
+p {
+  margin: 0;
+  text-shadow: 0 1px 0 #fff;
+}
+.about {
+  margin: 10px 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+.about p {
+  color: #999;
+  padding: 0 0 10px;
+}
+.about p:last-child {
+  padding-bottom: 0;
+}
+.about a {
+  color: #555;
+  text-decoration:none;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+  transition:.3s;
+}
+.about a:hover {
+  color: #0732c0;
+}
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  #logo img {
+    width: 150px;
+  }
+  h1 {
+    font-size: 16px;
+  }
+  .content {
+    width: 320px;
+    margin: 0 auto;
+    padding: 10px 20px 20px;
+  }
+  label {
+    width: 150px;
+  }
+  input, textarea#mediaQuery {
+    max-width: 150px;
+  }
+  textarea#mediaQuery {
+    width: 95%;
+    margin: 10px 0 0;
+    max-width: 100%;
+  }
+  .addthis_toolbox {
+    padding: 15px 0;
+  }
+}
